--- a/mod1/index.html
+++ b/mod1/index.html
@@ -4,6 +4,7 @@
 	<title>Trying!</title>
 </head>
 <body>
-<h1>I have to try this againg!</h1>
+<h1>I have to try this again</h1>
+<h1>it might just work this time</h1>
 </body>
 </html>
