--- a/mod1/index.html
+++ b/mod1/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Trying!</title>
+<meta charset="utf-8">
+<title>Trying!</title>
+<link rel="stylesheet" href="style.css">
+
+}
 </head>
 <body>
 <h1>I have to try this again</h1>
