--- a/mod1/index.html
+++ b/mod1/index.html
@@ -2,13 +2,35 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Trying!</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>mod2-solution</title>
 <link rel="stylesheet" href="style.css">
-
+<style>
+* {
+  box-sizing: border-box;
 }
+</style>
 </head>
+
 <body>
-<h1>I have to try this again</h1>
-<h1>it might just work this time</h1>
+<h1>Meals</h1>
+	
+		<div id="b1">
+		 <h2 id="first" >Breakfast</h2>
+		 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+	</div>
+
+		<div id="b2" class="col-lg-3 col-lg-6">  
+	     <h2 id="second" >Lunch</h2>
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+	</div>
+
+		<div id="b3">
+   		 <h2 id="third" >Dinner</h2>
+		 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+	</div>
+	
+		
+
 </body>
 </html>
